--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
@@ -1,17 +1,23 @@
 
 .bg-home-full {
-  height: 480px;
+  min-height: 480px;
 }
 
 .bg-home {
   background-size: cover;
   background-position: center center;
   position: relative;
-  padding: 120px 0;
 }
 
 .home-title {
   font-size: 3.1rem;
+}
+
+.home-center {
+  position: absolute;
+  z-index: 1;
+  top: 105px;
+  left: 0;
 }
 
 .home-subtitle {
@@ -24,7 +30,75 @@
   top: 0;
 }
 
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .btn {
   padding: 8px 16px;
   font-size: 12px;
+}
+
+#leadership-team {
+  .testimonial-client-img {
+    width: 130px;
+    height: 130px;
+    margin: 0 0 0 auto;
+  }
+
+  ul {
+    padding-left: 0;
+
+    li {
+      word-break: break-all;
+
+      &:first-child {
+        font-weight:bold;
+      }
+    }
+  }
+}
+
+
+#team {
+  border-top: 1px solid #d4d4d4;
+  .team-box {
+    .team-img {
+      float: left;
+    }
+
+    .team-desc  {
+      .team-name {
+        font-size: 15px;
+      }
+      .team-work {
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media (min-width: 200px) and (max-width: 768px) {
+  .bg-home-full {
+    min-height: 640px;
+  }
+
+  .home-center {
+    top: 55px;
+  }
+}
+
+@media (max-width: 991px) {
+
+
 }
