--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -112,11 +112,11 @@
     </div>
     <div class="row mt-3 pt-3">
       <div class="col-lg-3 mt-3" *ngFor="let member of members">
-        <div class="team-box p-4">
-          <div class="team-img">
-            <img [src]="'assets/images/leader-jangwon.png'" alt="" class="mx-auto d-block rounded-circle " height="90">
+        <div class="team-box pt-4 pb-4 pl-2">
+          <div class="team-img mr-2">
+            <img [src]="'assets/images/team/' + member.image" alt="" class="mx-auto d-block rounded-circle " height="90">
           </div>
-          <div class="team-desc text-center mt-4">
+          <div class="team-desc text-center mt-4 pl-1">
             <h6 class="team-name text-custom mb-1">{{member.name}}</h6>
             <p class="team-work text-muted">{{member.position}}</p>
           </div>
