--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -1,5 +1,21 @@
 <footer>
-  <div class="company">
-    Company information
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="footer-content">
+          <div class="footer-alt text-center mt-5 mb-4">
+            <p class="mb-0">2015~2018 © Muzika. All Rights Reserved</p>
+          </div>
+          <div class="footer-icon mb-5">
+            <ul class="list-unstyled social-icon text-center">
+              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-facebook"></i></a></li>
+              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-twitter"></i></a></li>
+              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-instagram"></i></a></li>
+              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-github"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
