--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -106,7 +106,7 @@
           <div class="section-title-icon">
             <i class="pe-7s-like2 text-custom"></i>
           </div>
-          <h2>Staff Team</h2>
+          <h2>STAFF TEAM</h2>
         </div>
       </div>
     </div>
