--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-12">
         <div class="footer-content">
           <div class="footer-alt text-center mt-5 mb-4">
-            <p class="mb-0">2015~2018 © Muzika. All Rights Reserved</p>
+            <p class="mb-0">2018 © Muzika Foundation. All Rights Reserved</p>
           </div>
           <div class="footer-icon mb-5">
             <ul class="list-unstyled social-icon text-center">
