--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -146,7 +146,7 @@
 
 .navbar-custom.nav-sticky {
   background-color: #fff !important;
-  padding: 15px 0px;
+  padding: 12px 0px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -156,4 +156,14 @@
 
 .nav-sticky .navbar-brand {
   color: #000 !important;
+  brand-icon-muzika {
+
+    /deep/ .muzika-icon-striped-primary {
+      fill: black;
+    }
+
+    /deep/ .muzika-icon-striped-secondary {
+      fill: black;
+    }
+  }
 }
