--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -4,15 +4,19 @@
       <div class="col-lg-12">
         <div class="footer-content">
           <div class="footer-alt text-center mt-5 mb-4">
-            <p class="mb-0">2018 © Muzika Foundation. All Rights Reserved</p>
+            <brand-icon-muzika></brand-icon-muzika>
+            <p class="mb-0 mt-3">Muzika Foundation</p>
           </div>
-          <div class="footer-icon mb-5">
+          <div class="footer-icon mb-3">
             <ul class="list-unstyled social-icon text-center">
               <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-facebook"></i></a></li>
               <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-twitter"></i></a></li>
               <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-instagram"></i></a></li>
               <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-github"></i></a></li>
             </ul>
+          </div>
+          <div class="mb-5 small text-center">
+            Copyright (c) 2018 MUZIKA. All RIghts Reserved
           </div>
         </div>
       </div>
