--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -14,19 +14,19 @@
           <a class="nav-link" href="#home">White Paper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#services">Team</a>
+          <a class="nav-link" href="#leadership-team">Team</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#features">Advisors</a>
+          <a class="nav-link" href="#advisors">Advisors</a>
         </li>
 
        <li class="nav-item">
-          <a class="nav-link" href="#team">Roadmap</a>
+          <a class="nav-link" href="#roadmap">Roadmap</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#pricing">Services</a>
+          <a class="nav-link" href="#services">Services</a>
         </li>
 
         <li class="nav-item">
