WIP: feat(i18n): support i18n module in intro site

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -29,8 +29,17 @@
           <a class="nav-link" href="#services">Services</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#faq">FAQ</a>
+        <li class="divider">&nbsp;</li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            ENG
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">English</a>
+            <a class="dropdown-item" href="#">中文</a>
+            <a class="dropdown-item" href="#">한국어</a>
+          </div>
         </li>
       </ul>
 
