--- a/projects/viewer/src/modules/post/pages/post-list/music/post-music.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/music/post-music.component.html
@@ -44,7 +44,7 @@
 </section>
 
 <div class="write-overlay">
-  <button mat-fab color="accent" routerLink="/board/music/write">
+  <button mat-fab color="accent" routerLink="/board/streaming/write">
     <i class="fa fa-pencil"></i>
   </button>
 </div>
