--- a/projects/viewer/src/components/navbar/navbar.component.scss
+++ b/projects/viewer/src/components/navbar/navbar.component.scss
@@ -33,7 +33,8 @@
   margin: 0;
 
   li {
-    width: 140px;
+    padding: 0 10px;
+    margin: 0 10px;
     line-height: 40px;
     text-align: center;
     //padding-bottom: 1.5rem;
@@ -65,37 +66,37 @@
   }
 }
 
-.search {
-  position: relative;
-
-  .search-wrapper {
-    background: #fff;
-    border-radius: 4px;
-    width: 360px;
-    color: #404040;
-
-    .search-icon {
-      float: left;
-      padding: 0 16px;
-
-      i {
-        padding: 0;
-        margin: 0;
-      }
-    }
-
-    .search-input {
-      overflow: hidden;
-
-      input {
-        background: transparent;
-        border: none;
-        outline: none;
-        height: 100%;
-      }
-    }
-  }
-}
+//.search {
+//  position: relative;
+//
+//  .search-wrapper {
+//    background: #fff;
+//    border-radius: 4px;
+//    width: 360px;
+//    color: #404040;
+//
+//    .search-icon {
+//      float: left;
+//      padding: 0 16px;
+//
+//      i {
+//        padding: 0;
+//        margin: 0;
+//      }
+//    }
+//
+//    .search-input {
+//      overflow: hidden;
+//
+//      input {
+//        background: transparent;
+//        border: none;
+//        outline: none;
+//        height: 100%;
+//      }
+//    }
+//  }
+//}
 
 .user-name {
   color: #fff;
