--- a/projects/viewer/src/components/navbar/navbar.component.html
+++ b/projects/viewer/src/components/navbar/navbar.component.html
@@ -1,9 +1,5 @@
 <nav class="navbar navbar-expand">
   <div class="container-fluid">
-    <div class="navbar-brand" routerLink="/">
-      <brand-icon-muzika></brand-icon-muzika>
-    </div>
-
     <div class="navbar-collapse">
       <ul class="row main-menu flex-grow-1">
         <!--<li routerLink="/board/video" routerLinkActive="active">-->
@@ -16,11 +12,19 @@
         <!--</li>-->
         <li routerLink="/board/streaming/write" routerLinkActive="active">
           <i class="fa fa-music"></i>
-          Upload Streaming Music
+          Upload Song
+        </li>
+        <li routerLink="/board/sheet" routerLinkActive="active">
+          <i class="fa fa-music"></i>
+          My Songs
         </li>
         <li routerLink="/board/sheet/write" routerLinkActive="active">
           <i class="fa fa-file-pdf"></i>
           Upload Sheet Music
+        </li>
+        <li routerLink="/board/sheet" routerLinkActive="active">
+          <i class="fa fa-file-pdf"></i>
+          My Sheet Music
         </li>
       </ul>
       <ng-container *ngIf="currentUser; else loggedInBlock">
