refactor(navbar): connect to real url router

--- a/projects/viewer/src/components/navbar/navbar.component.html
+++ b/projects/viewer/src/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <i class="fa fa-music"></i>
           Upload Song
         </li>
-        <li routerLink="/board/sheet" routerLinkActive="active">
+        <li routerLink="/board/streaming/my" routerLinkActive="active">
           <i class="fa fa-music"></i>
           My Songs
         </li>
@@ -22,7 +22,7 @@
           <i class="fa fa-file-pdf"></i>
           Upload Sheet Music
         </li>
-        <li routerLink="/board/sheet" routerLinkActive="active">
+        <li routerLink="/board/sheet/my" routerLinkActive="active">
           <i class="fa fa-file-pdf"></i>
           My Sheet Music
         </li>
