refactor(common): now available for AoT compile

--- a/projects/web/src/modules/post/components/youtube-video-cell/youtube-video-cell.component.html
+++ b/projects/web/src/modules/post/components/youtube-video-cell/youtube-video-cell.component.html
@@ -12,7 +12,7 @@
   <span class="text-muted">
         {{post.author.name}}
     </span>
-  <span class="text-muted">조회수 {{post.views}} · {{post.customTime}}</span>
+  <span class="text-muted">조회수 {{post.views}} · time</span>
 </div>
 
 <ul class="iconlist" [class.visited]="false">
